# src/models/index.ts
@@ -2,3 +2,5 @@ export { User } from './User.js';
 export { UserCheckIn } from './UserCheckIn.js';
 export { Company } from './Company.js';
 export { Invitation } from './Invitation.js';
+export { UserMovementHistory } from './UserMovementHistory.js';
+export { AuditConfiguration } from './AuditConfiguration.js';
